--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <title>Trabajo Practico N°4</title>
 </head>
 <body>
-    <script src="js/punto4.js"></script>
+    <script src="js/Punto5.js"></script>
 </body>
 </html>
